<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

        <ch.deletescape.lawnchair.preferences.IconPackPreference
            android:key="pref_iconPackPackage"
            android:title="@string/icon_pack_preference_title"
            android:summary="@string/icon_pack_preference_summary"
            android:persistent="true" />

        <SwitchPreference
            android:key="pref_enableWhiteGoogleIcon"
            android:title="@string/white_google_icon_pref_title"
            android:defaultValue="false"
            android:persistent="true" />

        <SwitchPreference
            android:key="pref_enableScreenRotation"
            android:title="@string/enable_screen_rotation"
            android:defaultValue="false"
            android:disableDependentsState="true"
            android:persistent="true" />

        <SwitchPreference
            android:key="pref_showPixelBar"
            android:title="@string/show_pixel_bar_pref_title"
            android:defaultValue="true"
            android:persistent="true" />

        <SwitchPreference
            android:key="pref_fullWidthSearchbar"
            android:defaultValue="false"
            android:title="@string/use_wide_searchbar_pref_title"
            android:dependency="pref_showPixelBar"
            android:persistent="true" />

        <SwitchPreference
            android:key="pref_showMic"
            android:defaultValue="false"
            android:title="@string/show_mic_pref_title"
            android:dependency="pref_showPixelBar"
            android:persistent="true" />

        <SwitchPreference
            android:key="pref_hideAppLabels"
            android:title="@string/hide_icon_labels_pref_title"
            android:defaultValue="false"
            android:disableDependentsState="true"
            android:persistent="true" />

        <com.pavelsikun.vintagechroma.ChromaPreference
            android:key="pref_workspaceLabelColor"
            android:title="@string/workspace_label_color_hue_pref_title"
            app:chromaColorMode="ARGB"
            app:chromaIndicatorMode="HEX"
            app:chromaInitialColor="@android:color/white"/>

        <ListPreference
            android:key="pref_numCols"
            android:title="@string/num_cols_pref_title"
            android:entries="@array/numColsTexts"
            android:entryValues="@array/numColsValues"
            android:defaultValue="@string/generalDefault"
            android:summary="%s"
            android:persistent="true" />

        <ListPreference
            android:key="pref_numRows"
            android:title="@string/num_rows_pref_title"
            android:entryValues="@array/numRowsValues"
            android:entries="@array/numRowsTexts"
            android:defaultValue="@string/generalDefault"
            android:summary="%s"
            android:persistent="true" />

        <ch.deletescape.lawnchair.preferences.SeekbarPreference
            android:key="pref_iconScaleSB"
            android:title="@string/icon_scale_pref_title"
            app:minValue="0.3"
            app:maxValue="1.5"
            app:summaryFormat="%.0f%%"
            app:summaryMultiplier="100"
            app:defaultSeekbarValue="1.0"
            app:steps="120"
            android:persistent="true" />

        <ch.deletescape.lawnchair.preferences.SeekbarPreference
            android:key="pref_iconTextScaleSB"
            android:title="@string/icon_text_scale_pref_title"
            app:minValue="0.3"
            app:maxValue="1.5"
            app:summaryFormat="%.0f%%"
            app:summaryMultiplier="100"
            app:defaultSeekbarValue="1.0"
            app:steps="120"
            android:persistent="true" />

        <SwitchPreference
            android:key="pref_fullWidthWidgets"
            android:persistent="true"
            android:title="@string/full_width_width_widgets_pref_title"
            android:defaultValue="false"
            android:summary="@string/full_width_widgets_pref_summary" />

        <SwitchPreference
            android:key="pref_centerWallpaper"
            android:persistent="true"
            android:title="@string/center_wallpaper_pref_title"
            android:defaultValue="true" />

        <Preference
            android:key="notification_access"
            android:title="@string/notification_access_pref_title"
            android:summary="@string/notification_access_pref_summary">
            <intent android:action="android.settings.ACTION_NOTIFICATION_LISTENER_SETTINGS" />
        </Preference>
</PreferenceScreen>
