<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <SwitchPreference
        android:key="pref_showPixelBar"
        android:title="@string/show_pixel_bar_pref_title"
        android:defaultValue="true"
        android:persistent="true" />

    <SwitchPreference
        android:key="pref_fullWidthSearchbar"
        android:defaultValue="false"
        android:title="@string/use_wide_searchbar_pref_title"
        android:dependency="pref_showPixelBar"
        android:persistent="true" />

    <SwitchPreference
        android:key="pref_showMic"
        android:defaultValue="false"
        android:title="@string/show_mic_pref_title"
        android:dependency="pref_showPixelBar"
        android:persistent="true" />

    <SwitchPreference
        android:key="pref_useRoundSearchBar"
        android:defaultValue="false"
        android:title="@string/use_round_searhbar"
        android:persistent="true" />

    <SwitchPreference
        android:key="pref_pixelStyleIcons"
        android:title="@string/pixel_style_icons_pref_title"
        android:summary="@string/pixel_style_icons_pref_summary"
        android:defaultValue="true"
        android:persistent="true" />

    <SwitchPreference
        android:key="pref_showGoogleNowTab"
        android:persistent="true"
        android:title="@string/show_google_now_tab_pref_title"
        android:defaultValue="true" />
</PreferenceScreen>